# folio-matching

./: .gitignore  README.md  THIRD-PARTY.md  pyproject.toml
.github/workflows/: publish.yml
bench/: RESULTS.md  ruler_shootout.py  summary.json
docs/: BYOK.md
docs/migration/: SCHEDULE.md
docs/plans/: 2026-07-15-001-feat-folio-matching-v0-plan.md
src/folio_matching/: __init__.py  blocklist.py  decompose.py  entity_ruler.py  gates.py  ontology.py  pipeline.py  reconciler.py  scoring.py  sources.py
src/folio_matching/annotate/: __init__.py  feedback_store.py
src/folio_matching/data/: __init__.py  alias_blocklist.json
src/folio_matching/matching/: aho_corasick.py
src/folio_resolve/: __init__.py  blocklist.py  calibration.py  domain_prior.py  embedding.py  entity_ruler.py  gates.py  judge.py  lemma.py  resolve.py  spec.py
src/folio_resolve/annotate/: __init__.py  lifecycle.py  models.py  render.py
src/folio_resolve/data/: __init__.py  alias_blocklist.json
src/folio_resolve/matching/: __init__.py  aho_corasick.py
tests/: conftest.py  test_annotate.py  test_judge.py  test_lemma.py  test_matching_and_ruler.py  test_new_capabilities.py  test_overlap_sweep.py  test_pipeline.py  test_reconciler.py  test_resolve.py  test_scoring.py
